--- a/frontendFinderAltProject/src/app/component/navbar/navbar.component.css
+++ b/frontendFinderAltProject/src/app/component/navbar/navbar.component.css
@@ -1,6 +1,6 @@
 :host {
   display: block;
-  width: 100vw;
+  width: 100%;
   margin: 0;
   padding: 0;
 }
@@ -10,16 +10,17 @@
   bottom: 0;
   left: 0;
   right: 0;
-  width: 100vw;
+  width: 100%;
   background-color: #1a1a2e;
   display: flex;
   justify-content: space-around;
   align-items: center;
   padding: 12px 0;
   box-shadow: 0 -2px 8px rgba(0, 0, 0, 0.6);
-  z-index: 999;
+  z-index: 1000; /* Augmenté pour s'assurer qu'il est au-dessus de tout */
   border-top: 1px solid #2c2c3e;
   height: 70px;
+  box-sizing: border-box;
 }
 
 .bottom-navbar a {
